# arena

./: Cargo.toml
src/: main.rs  seg.rs  smooth_brain.rs  structs.rs
src/JSON/: run.json  run_jump.json  test.json
src/assets/: config.json  run.json  test.json
