[package]
name = "arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston_window = "*"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.70.1"
piston2d-opengl_graphics = "0.81.0"
rand = "0.8"
serde_json = "1.0.59"
serde = "1.0.59"
serde_derive = "1.0.117"
once_cell = "1.12.0"