[package]
name = "arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8"
serde_json = "1.0.59"
serde = "1.0.59"
serde_derive = "1.0.117"
once_cell = "1.12.0"
native-dialog = "0.6.3"
find_folder = "*"
speedy2d = "1.0.5"
num_cpus = "1.13.1"
